# node-health-agent

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
agent/: config.py  emit.py  evaluate.py  logging.py  main.py  model.py  runtime.py  state.py
agent/collectors/: __init__.py  base.py  cpu.py  disk.py  heartbeat.py  identity.py  memory.py  network.py
docs/contracts/: event.schema.json  report.schema.json
fixtures/: demo_degraded.jsonl  demo_healthy.jsonl  demo_mixed.jsonl  demo_reboot.jsonl  spool_degraded.jsonl  spool_mixed.jsonl  spool_multi.jsonl  spool_node_a.jsonl  spool_node_b.jsonl  spool_small.jsonl
multi_spool/: node-a.jsonl  node-b.jsonl
scripts/: validate_spool.py
tests/: test_agent_start_event.py  test_agent_tick_contract.py  test_config.py  test_degraded_on_failure.py  test_evaluate_health.py  test_event_vocab.py  test_event_vocabulary.py  test_identity_behavior.py  test_report_schema.py  test_run_bounded.py  test_seq_persistence.py  test_spool_rotation.py  test_spool_validation.py  test_triage_explain.py  test_triage_filters.py  test_triage_improvements.py  test_triage_status.py  test_triage_summarize.py  test_triage_summarize_dir.py
triage/: __init__.py  cli.py  read.py  summarize.py
triage/render/: __init__.py  base.py  explain.py  json.py  pretty.py  table.py  text.py  utils.py
