[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "node-health-agent"
version = "0.1.0"
authors = [
    { name = "carter-vin" },
]
description = "Node-local health reporting agent with triage tooling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
]

[project.scripts]
node-health-agent = "agent.main:app"

[tool.setuptools]
packages = ["agent"]

[tool.ruff]
line-length = 100
target-version = "py311"